Align form container content to stop forms hugging right side of the screen on mobiles.

--- a/static/css/booking-form.css
+++ b/static/css/booking-form.css
@@ -29,6 +29,7 @@ a.btn-delete {
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+    align-content: center;
 }
 
 .formbold-form-wrapper {
